# jitsi-matrix-auth-proxy

./: .gitignore  README.md  pyproject.toml
jitsi_matrix_auth_proxy/: server.py
miscellaneous/: jitsi-matrix-auth-proxy.service  nginx.conf
miscellaneous/systemd/: jitsi-matrix-auth-proxy.service  jitsi-matrix-auth-proxy.socket
