[tool.poetry]
name = "jitsi-matrix-auth-proxy"
version = "0.1.0"
description = "Proxy to convert on the fly Matrix custom JWT for Jitsi to standard JWT"
authors = ["c-cal <github-2c7c@zebrina.fr>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "jitsi_matrix_auth_proxy"}]

[tool.poetry.dependencies]
python = "^3.8"
blacksheep = "^1.2.9"
uvicorn = "^0.20.0"
PyJWT = "^2.6.0"
gunicorn = "^20.1.0"
redis = {extras = ["hiredis"], version = "^4.5.1"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
